11/29/11 basics: add ':' before "Basics" in title, the titling convention used in other basics sims (eg, states-of-matter)
11/29/11 basics: i18n of tab labels
11/29/11 basics: made it so the user can't manipulate the tracks in tabs 1-2
11/29/11 basics: change TrackControlPanel to extend ControlPanelNode, so that setting control panels to same width will be easier
11/29/11 basics: add ticks to Track Friction slider
11/29/11 basics: remove code that was constructing strings keys dynamically for the energy legend
11/29/11 basics: inline i18n of strings
11/29/11 basics: make “Bar Chart” a checkbox instead of a button, set its state when dialog is closed from window dressing
11/29/11 basics: extract constant TITLE_FONT for the title of controls, use it for "Energy Graphs", "Track Friction", "Stick to Track"
11/29/11 basics: remove horizontal separator line between "Track Friction" and "Stick to Track" controls
11/29/11 basics: move "Bar Chart" control above "Pie Chart" control
11/29/11 basics: Reset All button should be orange in all tabs
11/29/11 common: change wording of "Bring back the PhET skater" to "Return Skater"
11/29/11 common: remove italic font from energy legend
# 2.08.03 (56847) Sep 22, 2011
Energy Skate Park Basics: Initialize the skater beneath the track so the user has to move it to start the sim
# 2.08.02 (56801) Sep 21, 2011
Energy Skate Park Basics: Fixed reset all for track friction value
Energy Skate Park Basics: Fixed reset all for track friction on/off
Energy Skate Park Basics: Fixed reset all for stick to track on/off
Fixed reset all for pie chart
Fixed reset all for track selection
Basics: Moved tracks to the right since they were going offscreen
# 2.08.01 (56115) Sep 2, 2011
Improved friction and stickiness controls
Added bar graphs
Removed keyboard-driven rocket thrusters
Moved the legend out from behind the control panel
Fixed sky graphics
Moved the house to the right and the mountains to the left
Added buttons to switch track