@@ -26,6 +26,13 @@ public class FrictionModule extends EnergySkateParkBasicsModule {
         addTrackSelectionControlPanel();
         addResetAllButton( trackFrictionControlPanel );
 
+        reset();
+    }
+
+    @Override public void reset() {
+        super.reset();
+
+        //Load the initial track
         load( PARABOLA, true );
     }
 }
